image fix, testing on mobile

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,15 +1,45 @@
+@use '../global.scss';
+
 .heading{
 
     &-section{
         // width: 100%;
-        height: 100vh;
+        height: 500px;
         background-image: url('../../public/imgs/heading_bg.png');
         background-repeat: no-repeat;
         background-size: cover;
-
-        @media screen and (max-width: 1000px) {
-            background-size: contain;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        @media screen and (min-width: 1000px) {
+            justify-content: flex-start;
+            align-items: start;
+            height: 100vh;
+            background-size: cover;
+            flex-direction: column-reverse;
         }
+
+    }
+
+    &-title{
+
+        font-size: 45px;
+        color: var(--light-green);
+        font-weight: 600;
+        margin-left: 20px;
+        margin-top: 40px;
+        line-height: 50px;
+        
+        @media screen and (min-width: 1000px) {
+            font-size: 80px;
+            margin-left: 230px;
+            margin-bottom: 200px;
+            margin-top: 0;
+            width: 380px;
+            line-height: 80px;
+        }
+
     }
 
 
